--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile project.fileTree(dir:'/Users/whuanghkl/code/mygit/io0007/target',include:['io0007-0.0.1-SNAPSHOT.jar'])
+//    compile 'com.kunlunsoft:io0007:0.0.1-SNAPSHOT'
 }
 
 intellij {
