--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -25,6 +25,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow id="My Sample Tool Window" icon="/logo/toolWind.png" anchor="right"
                     factoryClass="com.kunlunsoft.dialog.MyToolWindow"/>
+        <moduleBuilder builderClass="com.kunlunsoft.project.wizard.DemoModuleWizardStep" id="DEMO_STEP22"
+                       order="first"/>
 
     </extensions>
 
