idea 插件 增加创建aecp项目引导步骤

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,8 @@
                     factoryClass="com.kunlunsoft.dialog.MyToolWindow"/>
         <moduleBuilder builderClass="com.kunlunsoft.project.wizard.DemoModuleWizardStep" id="DEMO_STEP22"
                        order="first"/>
+        <moduleBuilder builderClass="com.kunlunsoft.project.wizard.DemoModuleWizardSecondStep" id="DEMO_STEP22Second2"
+                       order="after DEMO_STEP22"/>
 
     </extensions>
 
