--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile project.fileTree(dir:'/Users/hanjun/Documents/mygit/demo/io0007/target',include:['*.jar'])
     compile project.fileTree(dir:'/Users/hanjun/Documents/mygit/demo/idea_plugin/intellij-bpmn-editor/lib',include:['*.jar'])
+    compile project.fileTree(dir:'/Users/hanjun/Documents/mygit/work/aecp_plugin_idea/src/lib',include:['*.jar'])
 //    compile 'com.kunlunsoft:io0007:0.0.1-SNAPSHOT'
     compile 'com.fifesoft:rsyntaxtextarea:3.0.2'
 //    compile 'jxbrowser:jxbrowser-mac:6.1.1'
