--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -52,13 +52,15 @@
     <actions>
         <group id="MyPlugin.SampleMenu" text="AECP 首选项" description="Greeting menu">
             <add-to-group group-id="MainMenu" anchor="last"/>
-            <action id="Myplugin.Textboxes" class="com.kunlunsoft.HelloAction" text="业务逻辑编排" description="Says hello"/>
+            <action id="Myplugin.Textboxes" class="com.kunlunsoft.menu.HelloAction" text="业务编排"
+                    description="Says hello"/>
+            <action id="Myplugin.logic" class="com.kunlunsoft.menu.HelloAction" text="逻辑编排" description="Says hello"/>
             <action id="ToolWindowDemo" class="com.kunlunsoft.menu.WindowMainMenuDemo"
                     text="元数据集配置" description="ToolWindowToolbarsDemo desc"/>
         </group>
 
         <action id="yaoqiang.actions.NewBPMNFileAction" class="org.yaoqiang.bpmn.intellij.actions.NewBPMNFileAction"
-                text="AECP 工作流设计" description="OMG BPMN 2.0 XML">
+                text="AECP 流程设计" description="OMG BPMN 2.0 XML">
             <add-to-group group-id="NewXml" anchor="before" relative-to-action="NewHtmlFile"/>
         </action>
         <group id="yaoqiang.actions.BPMNModelMenu"
